# pd_httprequest_util

./: .gitignore  PYPI_README.md  README.md  pyproject.toml
demos/: config.py
demos/async_demos/: all_fetch.py  all_fetch_but_stopwhenfirstfail.py  iter_fetch.py  set_log.py
demos/sync_demos/: all_fetch.py  all_fetch_but_stopwhenfirstfail.py  iter_fetch.py  set_log.py
pd_httprequest_util/: request.py  request_manager.py
pd_httprequest_util/connection/: __init__.py  async_.py  main.py  sync_.py
pd_httprequest_util/utils/: group_util.py  log_util.py
